<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.StoreSearchActivity">
    <item
        android:id="@+id/actionCards"
        android:orderInCategory="300"
        android:title="@string/menu_accessCardmenu"
        android:icon="@drawable/ic_credit_card_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionSearch"
        android:orderInCategory="300"
        android:title="@string/menu_searchStores"
        android:icon="@drawable/ic_store_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionPreferences"
        android:orderInCategory="300"
        android:title="@string/menu_accessPreferences"
        android:icon="@drawable/ic_person_black_24dp"
        app:showAsAction="ifRoom" />
    </menu>